--- a/assassin's-creed/style.css
+++ b/assassin's-creed/style.css
@@ -24,6 +24,9 @@ main {
     text-align: justify;
     line-height: 1.4em;
     padding: 5px;
+    display:flex;
+    align-items:center;
+    flex-direction:column;
 }
 
 h1 {
