--- a/assassin's-creed/style.css
+++ b/assassin's-creed/style.css
@@ -6,6 +6,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+:root {
+    --principal: 'Roboto', sans-serif;
+    --secundario: 'Roboto Condensed', sans-serif;
+    --destaque: 'Bebas Neue', cursive;
+}
+
 body {
     max-width: 850px;
     min-width: 500px;
@@ -30,19 +36,30 @@ main {
 }
 
 h1 {
-    font-family:  'Bebas Neue', cursive;
+    font-family: var(--destaque)
 }
 
 h2 {
-    font-family: 'Roboto', sans-serif;
+    font-family:var(--principal)
 }
 
 h3 {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--principal)
 }
 
 p {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: var(--secundario);
     text-indent: 10px;
 }
 
+table {
+    height: 100px;
+    width: 630px;
+    border-collapse: collapse;
+    font-family: var(--secundario);
+}
+
+td {
+    border: 1px solid black;
+    padding: 5px;
+}
